--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,7 +25,7 @@
     <main>
          <div class="hero">
             <img src="images/background.jpeg" alt="Background image">
-            <h1 class="box">Family & Friends Rafting Adventures</h1>
+            <h1>Family & Friends Rafting Adventures</h1>
 
         <article>
             
