--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">Rafting Site</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Site</a>
             <a href="wwr/site-plan-rafting.html">Site Plan</a>
             <a href="https://facebook.com">Profile</a>
             <a href="https://www.linkedin.com/">linkedin</a>
