--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,12 +8,12 @@
         </style>
     <link rel="stylesheet" href="styles/rafting.css">
 
-    <title>Document</title>
+    <title>About page</title>
 </head>
 <body>
     
     <header>
-        <img class="logo" src="images/logo.png " alt="logo" width="100">
+        <img class="logo" src="images/logo.png " alt="logo" width="170">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
